--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,7 @@
 }
 
 * {
-  font-family: "Indie Flower", cursive;
+  font-family: 'Indie Flower', cursive;
   font-weight: 700;
   letter-spacing: 0.1em;
 }
